--- a/servithenFR/htmlFR/formFR.html
+++ b/servithenFR/htmlFR/formFR.html
@@ -20,16 +20,12 @@
 
     <header>
 
-        <!-- <div class="bandeauTop">
-            <a>num tel : 06 00 00 00 00 |</a>
-            <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w"><span>nous contacté</span></a>
-        </div>-->
-
+        <!-- La bar navigation -->
 
         <div class="navbar">
 
 
-            <a href="/servithenFR/htmlFR/accueilFR.html"><img class="logo" src="/img/logo.png" /></a>
+            <a href="/servithenFR/htmlFR/accueilFR.html"><img class="logo" src="/img/logoSite/logo.png "></a>
 
             <a href="/servithenFR/htmlFR/formFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" /></a>
 
@@ -74,6 +70,8 @@
 
     </header>
 
+    <!-- texte sur l'image en haut de la page -->
+
     <div id="infoAccueil">
         <div id="txtAccueil">
             <p>
@@ -82,6 +80,9 @@
         </div>
 
     </div>
+    <div class="page"></div>
+
+    <!-- le formulaire -->
 
     <section id="nousContacter">
         <div id="contact">
@@ -98,6 +99,9 @@
                 </fieldset>
             </form>
         </div>
+
+        <!-- info sur la société -->
+
         <aside id="asideContainer">
             <div id="containerInfo">
                 <p id="test">Servithen</p>
@@ -123,68 +127,76 @@
     </section>
 
 
+    <!-- le google map -->
 
     <div>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2627.235857724453!2d1.9062641155682958!3d48.815561111675535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e69b2e4c101591%3A0x3c4b6015d2f3a5ea!2s8%20Rue%20Guillaume%20de%20Bois%20Nivard%2C%2078640%20Neauphle-le-Ch%C3%A2teau!5e0!3m2!1sfr!2sfr!4v1647355210357!5m2!1sfr!2sfr"
             width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
 
-    <div class="container2">
-        <h3 class="text-center2 font-weight-bold2">Nos partenaires :</h3>
-        <div class="déco">
-            <div class="sphère"></div>
-            <div class="transmission"></div>
-            <div class="barre"></div>
-            <div class="sphère"></div>
+    <!-- Les partenaires et nous font confiance -->
+
+    <div id="caroussel">
+
+        <div class="container2">
+            <h3 class="text-center2 font-weight-bold2">Nos partenaires :</h3>
+            <div class="déco">
+                <div class="sphère"></div>
+                <div class="transmission"></div>
+                <div class="barre"></div>
+                <div class="sphère"></div>
+            </div>
+            <section class="customer-logos2 slider2">
+                <div class="slide2"><img src="/img/partenaire/lechler_logo.png"></div>
+                <div class="slide2"><img src="/img/partenaire/logo-neu-process.png"></div>
+                <div class="slide2"><img src="/img/partenaire/logo-Siemens.png"></div>
+                <div class="slide2"><img src="/img/partenaire/someflu.png"></div>
+            </section>
         </div>
-        <section class="customer-logos2 slider2">
-            <div class="slide2"><img src="/img/partenaire/lechler_logo_juin19.png"></div>
-            <div class="slide2"><img src="/img/partenaire/logo-neu-process.png"></div>
-            <div class="slide2"><img src="/img/partenaire/logo-Siemens.jpeg"></div>
-            <div class="slide2"><img src="/img/partenaire/someflu.png"></div>
-        </section>
-    </div>
 
 
 
-    <div class="container">
-        <h2 class="text-center font-weight-bold">nous font confiance :</h2>
-        <section class="customer-logos slider">
-            <div class="slide"><img src="/img/LogoConfiance/artelia.png"></div>
-            <div class="slide"><img src="/img/LogoConfiance/guerbet.png"></div>
-            <div class="slide"><img src="/img/LogoConfiance/logo-constellium.png"></div>
-            <div class="slide"><img src="/img/LogoConfiance/logo-orange.png"></div>
-            <div class="slide"><img src="/img/LogoConfiance/Logo-Veolia.png"></div>
-            <div class="slide"><img src="/img/LogoConfiance/ocp.png"></div>
-            <div class="slide"><img src="/img/LogoConfiance/orano-logo.png"></div>
-            <div class="slide"><img src="/img/LogoConfiance/sgd-pharma-logo.svg"></div>
-            <div class="slide"><img src="/img/LogoConfiance/siaap.png"></div>
-            <div class="slide"><img src="/img/LogoConfiance/suez.png"></div>
-            <div class="slide"><img src="/img/LogoConfiance/valorhin.png"></div>
-        </section>
-    </div>
-    <footer>
-        <div>
-            <h4>Coordonné</h4>
-            <p>
-                <br> -Téléphone :
-                <a href="Tel:+33134897146"> +33 (0) 1 34 89 71 46</a>
-                <br>
-                <br>-Mail :
-                <a class="footerp" href="mailto:info@servithen.fr">info@servithen.fr</a>
-                <br>
-                <br>-Linkedin :
-                <a target="_blank" class="footerp" class="footerp" href="https://www.linkedin.com/company/servithen/">Société SERVITHEN</a>
-
-            </p>
-
-
-
-            <h4>Adresse siège :</h3>
-
-                <a target="_blank" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">8 Rue Guillaume de Bois Nivard, 78640 Neauphle-le-Château</a>
+        <div class="container">
+            <h2 class="text-center font-weight-bold">nous font confiance :</h2>
+            <section class="customer-logos slider">
+                <div class="slide"><img src="/img/LogoConfiance/artelia.png"></div>
+                <div class="slide"><img src="/img/LogoConfiance/guerbet.png"></div>
+                <div class="slide"><img src="/img/LogoConfiance/logo-constellium.png"></div>
+                <div class="slide"><img src="/img/LogoConfiance/logo-orange.png"></div>
+                <div class="slide"><img src="/img/LogoConfiance/Logo-Veolia.png"></div>
+                <div class="slide"><img src="/img/LogoConfiance/ocp.png"></div>
+                <div class="slide"><img src="/img/LogoConfiance/orano-logo.png"></div>
+                <div class="slide"><img src="/img/LogoConfiance/sgd-pharma-logo.svg"></div>
+                <div class="slide"><img src="/img/LogoConfiance/siaap.png"></div>
+                <div class="slide"><img src="/img/LogoConfiance/suez.png"></div>
+                <div class="slide"><img src="/img/LogoConfiance/valorhin.png"></div>
+            </section>
         </div>
-    </footer>
+
+        <!-- bas de la page avec les coordonnées -->
+
+        <footer>
+            <div>
+                <h4>Coordonné</h4>
+                <p>
+                    <br> -Téléphone :
+                    <a href="Tel:+33134897146"> +33 (0) 1 34 89 71 46</a>
+                    <br>
+                    <br>-Mail :
+                    <a class="footerp" href="mailto:info@servithen.fr">info@servithen.fr</a>
+                    <br>
+                    <br>-Linkedin :
+                    <a target="_blank" class="footerp" class="footerp" href="https://www.linkedin.com/company/servithen/">Société SERVITHEN</a>
+
+                </p>
+
+
+
+                <h4>Adresse siège :</h3>
+
+                    <a target="_blank" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">8 Rue Guillaume de Bois Nivard, 78640 Neauphle-le-Château</a>
+            </div>
+        </footer>
 </body>
 
 
