--- a/servithenEN/htmlEN/accueilEN.html
+++ b/servithenEN/htmlEN/accueilEN.html
@@ -23,7 +23,7 @@
         <div class="navbar">
 
 
-            <a href="/servithenEN/htmlEN/accueilEN.html"><img class="logo" src="/img/logo.png" /></a>
+            <a href="/servithenEN/htmlEN/accueilEN.html"><img class="logo" src="/img/logoSite/logo.png "></a>
 
             <a href="/servithenFR/htmlFR/accueilFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" /></a>
 
@@ -68,6 +68,8 @@
 
     </header>
 
+    <!-- texte sur l'image en haut de la page -->
+
     <div id="infoAccueil">
         <div id="txtAccueil">
             <p>
@@ -80,7 +82,9 @@
             </p>
         </div>
     </div>
-    <img src="/img/Fondu.png" class="transition">
+
+    <!-- section notre activité avec les image et les texte-->
+
     <div class="page"></div>
     <section class="nav">
         <div class="fond">
@@ -117,65 +121,70 @@
         </div>
     </section>
 
-    <div class="container2">
-        <h3 class="text-center2 font-weight-bold2">Our partners :</h3>
-        <div class="déco">
-            <div class="sphère"></div>
-            <div class="transmission"></div>
-            <div class="barre"></div>
-            <div class="sphère"></div>
+
+    <!-- Les partenaires et nous font confiance -->
+
+    <div id="caroussel">
+
+        <div class="container2">
+            <h3 class="text-center2 font-weight-bold2">Nos partenaires :</h3>
+            <div class="déco">
+                <div class="sphère"></div>
+                <div class="transmission"></div>
+                <div class="barre"></div>
+                <div class="sphère"></div>
+            </div>
+            <section class="customer-logos2 slider2">
+                <div class="slide2"><img src="/img/partenaire/lechler_logo.png"></div>
+                <div class="slide2"><img src="/img/partenaire/logo-neu-process.png"></div>
+                <div class="slide2"><img src="/img/partenaire/logo-Siemens.png"></div>
+                <div class="slide2"><img src="/img/partenaire/someflu.png"></div>
+            </section>
         </div>
-        <section class="customer-logos2 slider2">
-            <div class="slide2"><img src="/img/partenaire/lechler_logo_juin19.png"></div>
-            <div class="slide2"><img src="/img/partenaire/logo-neu-process.png"></div>
-            <div class="slide2"><img src="/img/partenaire/logo-Siemens.jpeg"></div>
-            <div class="slide2"><img src="/img/partenaire/someflu.png"></div>
-        </section>
-    </div>
 
 
 
-    <div class="container">
-        <h2 class="text-center font-weight-bold">trust us :</h2>
-        <section class="customer-logos slider">
-            <div class="slide"><img src="/img/LogoConfiance/artelia.png"></div>
-            <div class="slide"><img src="/img/LogoConfiance/guerbet.png"></div>
-            <div class="slide"><img src="/img/LogoConfiance/logo-constellium.png"></div>
-            <div class="slide"><img src="/img/LogoConfiance/logo-orange.png"></div>
-            <div class="slide"><img src="/img/LogoConfiance/Logo-Veolia.png"></div>
-            <div class="slide"><img src="/img/LogoConfiance/ocp.png"></div>
-            <div class="slide"><img src="/img/LogoConfiance/orano-logo.png"></div>
-            <div class="slide"><img src="/img/LogoConfiance/sgd-pharma-logo.svg"></div>
-            <div class="slide"><img src="/img/LogoConfiance/siaap.png"></div>
-            <div class="slide"><img src="/img/LogoConfiance/suez.png"></div>
-            <div class="slide"><img src="/img/LogoConfiance/valorhin.png"></div>
-        </section>
-    </div>
-
-
-
-    <footer>
-        <div>
-            <h4>Coordinated</h4>
-            <p>
-                <br> -Telephone :
-                <a href="Tel:+33134897146"> +33 (0) 1 34 89 71 46</a>
-                <br>
-                <br>-Mail :
-                <a class="footerp" href="mailto:info@servithen.fr">info@servithen.fr</a>
-                <br>
-                <br>-Linkedin :
-                <a target="_blank" class="footerp" class="footerp" href="https://www.linkedin.com/company/servithen/">Société SERVITHEN</a>
-
-            </p>
-
-
-
-            <h4>Headquarters address :</h3>
-
-                <a target="_blank" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">8 Rue Guillaume de Bois Nivard, 78640 Neauphle-le-Château</a>
+        <div class="container">
+            <h2 class="text-center font-weight-bold">nous font confiance :</h2>
+            <section class="customer-logos slider">
+                <div class="slide"><img src="/img/LogoConfiance/artelia.png"></div>
+                <div class="slide"><img src="/img/LogoConfiance/guerbet.png"></div>
+                <div class="slide"><img src="/img/LogoConfiance/logo-constellium.png"></div>
+                <div class="slide"><img src="/img/LogoConfiance/logo-orange.png"></div>
+                <div class="slide"><img src="/img/LogoConfiance/Logo-Veolia.png"></div>
+                <div class="slide"><img src="/img/LogoConfiance/ocp.png"></div>
+                <div class="slide"><img src="/img/LogoConfiance/orano-logo.png"></div>
+                <div class="slide"><img src="/img/LogoConfiance/sgd-pharma-logo.svg"></div>
+                <div class="slide"><img src="/img/LogoConfiance/siaap.png"></div>
+                <div class="slide"><img src="/img/LogoConfiance/suez.png"></div>
+                <div class="slide"><img src="/img/LogoConfiance/valorhin.png"></div>
+            </section>
         </div>
-    </footer>
+
+        <!-- bas de la page avec les coordonnées -->
+
+        <footer>
+            <div>
+                <h4>Coordinated</h4>
+                <p>
+                    <br> -Telephone :
+                    <a href="Tel:+33134897146"> +33 (0) 1 34 89 71 46</a>
+                    <br>
+                    <br>-Mail :
+                    <a class="footerp" href="mailto:info@servithen.fr">info@servithen.fr</a>
+                    <br>
+                    <br>-Linkedin :
+                    <a target="_blank" class="footerp" class="footerp" href="https://www.linkedin.com/company/servithen/">Société SERVITHEN</a>
+
+                </p>
+
+
+
+                <h4>Headquarters address :</h3>
+
+                    <a target="_blank" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">8 Rue Guillaume de Bois Nivard, 78640 Neauphle-le-Château</a>
+            </div>
+        </footer>
 </body>
 
 </html>
