--- a/servithenFR/htmlFR/appli.html
+++ b/servithenFR/htmlFR/appli.html
@@ -36,8 +36,8 @@
                     <i class="fa fa-caret-down"></i>
                   </button>
                 <div class="dropdown-content1">
-                    <a href="form.html">Nous contacter</a>
-                    <a  href="appliMP.html">MyPartner</a>
+                    <a href="formFR.html">Nous contacter</a>
+                    <a  href="appli.html">MyPartner</a>
                     <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
                 </div>
             </div>
@@ -72,7 +72,7 @@
     <div id="infoAccueil">
         <div id="txtAccueil">
             <p class="pTitre">
-                Decrouvrez notre application, <br>
+                Decrouvrez notre application: <br>
             </p>
         </div>
         <div id="nomAppli">
@@ -98,8 +98,8 @@
             </div>
             
             <div id="containerImg">
-                <img class="ppExplication" src="img/MP-p1.png" alt="page 1 explication">
-                <img class="ppExplication" src="img/MP-p2.png" alt="page 2 explication">
+                <img class="ppExplication" src="/img/MP-p1.png" alt="page 1 explication">
+                <img class="ppExplication" src="/img/MP-p2.png" alt="page 2 explication">
                 <img class="ppExplication" src="/img/MP-p3.png" alt="page 3 explication">
                 <img class="ppExplication" src="/img/MP-p4.png" alt="page 4 explication">
             </div>
@@ -111,7 +111,7 @@
                 <a target="_blank" href="https://play.google.com/store/apps/details?id=com.industriesolution.mypartner&hl=fr&gl=IL"> <img src="/img/play-store.png" alt="google play store"></a>
 
     </div>
-
+    <div id="caroussel" >
     <div class="container2">
         <h3 class="text-center2 font-weight-bold2">Nos partenaires :</h3>
         <div class="déco">
@@ -146,7 +146,7 @@
             <div class="slide"><img src="/img/LogoConfiance/valorhin.png"></div>
         </section>
     </div>
-
+</div>
 
 
     <footer>
