--- a/servithenFR/htmlFR/presentationFR.html
+++ b/servithenFR/htmlFR/presentationFR.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Servithen</title>
-    <link rel="shortcut icon" href="/img/Logo.png" type="/image/x-icon">
+    <link rel="shortcut icon" href="/img/logoSite/logo.png " type="/image/x-icon">
     <link rel="stylesheet" href="/servithenFR/cssFR/accueilFR.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
@@ -154,27 +154,39 @@
 
         <!-- bas de la page avec les coordonnées -->
 
-        <footer>
-            <div>
-                <h4>Coordonné</h4>
-                <p>
-                    <br> -Téléphone :
-                    <a href="Tel:+33134897146"> +33 (0) 1 34 89 71 46</a>
-                    <br>
-                    <br>-Mail :
-                    <a class="footerp" href="mailto:info@servithen.fr">info@servithen.fr</a>
-                    <br>
-                    <br>-Linkedin :
-                    <a target="_blank" class="footerp" class="footerp" href="https://www.linkedin.com/company/servithen/">Société SERVITHEN</a>
+        <footer class="coordonne">
 
-                </p>
-
-
-
-                <h4>Adresse siège :</h3>
-
-                    <a target="_blank" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">8 Rue Guillaume de Bois Nivard, 78640 Neauphle-le-Château</a>
+            <div class="foters">
+                <h4>Coordonné :</h4>
             </div>
+
+            <div class="foter">
+                <img class="logoinfo" src="/img/LogoFooter/logoTelW.png">
+                <a href="Tel:+33134897146"> +33 (0) 1 34 89 71 46</a>
+            </div>
+            <br>
+            <div class="foter">
+                <img class="logoinfo" src="/img/LogoFooter/logoMailW.png">
+                <a class="footerp" href="mailto:info@servithen.fr">info@servithen.fr</a>
+            </div>
+            <br>
+            <div class="foter">
+                <img class="logoinfo" src="/img/LogoFooter/linkedinW.png">
+                <a target="_blank" class="footerp" class="footerp" href="https://www.linkedin.com/company/servithen/">Société SERVITHEN</a>
+            </div>
+            <br>
+            <div class="foter">
+                <img class="logoinfo" src="/img/LogoFooter/logoPosW.png">
+                <a target="_blank" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">
+                        8 Rue Guillaume de Bois Nivard,<br> 78640 Neauphle-le-Château</a>
+
+            </div>
+
+
+
+
+
+
         </footer>
 </body>
 
