--- a/servithenEN/htmlEN/formEN.html
+++ b/servithenEN/htmlEN/formEN.html
@@ -37,7 +37,7 @@
                   </button>
                 <div class="dropdown-content1">
                     <a href="/servithenEN/htmlEN/formEN.html">Contact us</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 2</a>
+                    <a  href="appliEN.html">MyPartner</a>
                     <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
                 </div>
             </div>
