--- a/modif accueil.html
+++ b/modif accueil.html
@@ -72,6 +72,7 @@
             <textarea name="SousTitre" id="stxtTitre">
             </textarea>
         </div>
+        <textarea name="Backgroundimg" id="Background"></textarea>
 </div>
     <img src="img/Fondu.png" class="transition">
     <div class="page"></div>
@@ -81,12 +82,12 @@
             <div class="déco"><div class="sphère"></div><div class="transmission"></div><div class="barre"></div><div class="sphère"></div></div>
             <textarea name="Activity" id="DescActi"></textarea>
             <div class="flex">
-                <div class="hover"><div class="card2"><p class="description">Diagnostic d'installation</p><img src="img/IMG_E7116.jpeg" class="left"> <img src="img/IMG_7078.jpeg" class="right"> <img src="img/IMG_7104 bis.jpeg" class="middle"></div></div>
-                <div class="hover"><div class="card2"><p class="description">Remise aux normes</p><img src="img/20220310_152203741_iOS.jpeg" class="left"><img src="img/20220310_152209869_iOS.jpeg" class="right"> <img src="img/Norme.png" class="middle"></div></div>
+                <div class="hover"><div class="card2"><textarea name="description1" id="description1" class="descriptionmodif">Diagnostic d'installation</textarea><textarea name="left1" id="left1" class="modifleft"></textarea> <textarea name="right1" id="right1" class="modifright"></textarea> <textarea name="middle1" id="middle1" class="modifmiddle"></textarea></div></div>
+                <div class="hover"><div class="card2"><textarea name="description2" id="description2" class="descriptionmodif">Remise au normes</textarea><textarea name="left2" id="left2" class="modifleft"></textarea> <textarea name="right2" id="right2" class="modifright"></textarea> <textarea name="middle2" id="middle2" class="modifmiddle"></textarea></div></div>
             </div>
             <div class="flex">
-                <div class="hover"><div class="card2"><p class="description">Etude de projet</p><img src="img/Gaine 2701 assemblage 2.png" class="left"> <img src="img/Capture 2910 3.png" class="right"> <img src="img/Capture 2701 3d.png" class="middle"></div></div>
-                <div class="hover"><div class="card2"><p class="description">Installation complète</p><img src="img//c0cc2127-d5d1-4551-a58b-f8810966ded9.jpeg" class="left"> <img src="img/4173969b-65fc-4617-843d-711aa44b1d9e.jpeg" class="right"> <img src="img/120e21a2-83cb-43ba-9fa4-f79532850dd7.jpeg" class="middle"></div></div>
+                <div class="hover"><div class="card2"><textarea name="description3" id="description3" class="descriptionmodif">Etude de projet</textarea><textarea name="left3" id="left3" class="modifleft"></textarea> <textarea name="right3" id="right3" class="modifright"></textarea> <textarea name="middle3" id="middle3" class="modifmiddle"></textarea></div></div>
+                <div class="hover"><div class="card2"><textarea name="description4" id="description4" class="descriptionmodif">Installation complète</textarea><textarea name="left4" id="left4" class="modifleft"></textarea> <textarea name="right4" id="right4" class="modifright"></textarea> <textarea name="middle4" id="middle4" class="modifmiddle"></textarea></div></div>
             </div>
         </div>
     </section>
@@ -97,7 +98,7 @@
         <section class="customer-logos2 slider2">
             <div class="slide2"><img src="img/partenaire/lechler_logo_juin19.png"></div>
             <div class="slide2"><img src="img/partenaire/logo-neu-process.png"></div>
-            <div class="slide2"><img src="img/partenaire/logo-Siemens.jpeg"></div>
+            <div class="slide2"><img src="img/partenaire/logo-Siemens.png"></div>
             <div class="slide2"><img src="img/partenaire/someflu.png"></div>
         </section>
     </div>
