--- a/accueil.html
+++ b/accueil.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="accueil.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-    <script type="text/javascript" src="confiance.js"></script>
 </head>
 
 <body>
@@ -35,7 +34,7 @@
                   </button>
                 <div class="dropdown-content1">
                     <a href="form.html">Nous contacter</a>
-                    <a target="_blank" href="http://127.0.0.1:12001/modif%20accueil.html">Link 2</a>
+                    <a href="http://127.0.0.1:12001/modif%20accueil.html">Modif</a>
                     <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
                 </div>
             </div>
@@ -93,21 +92,21 @@
             <div class="flex">
                 <div class="hover">
                     <div class="card2">
-                        <p class="description">Diagnostic d'installation</p><img src="img/IMG_E7116.jpeg" class="left"> <img src="img/IMG_7078.jpeg" class="right"> <img src="img/IMG_7104 bis.jpeg" class="middle"></div>
+                        <p class="description">Diagnostic d'installation</p><img id="L1" class="left"> <img id="R1" class="right"> <img id="M1" class="middle"></div>
                 </div>
                 <div class="hover">
                     <div class="card2">
-                        <p class="description">Remise aux normes</p><img src="img/20220310_152203741_iOS.jpeg" class="left"><img src="img/20220310_152209869_iOS.jpeg" class="right"> <img src="img/Norme.png" class="middle"></div>
+                        <p class="description">Remise aux normes</p><img id="L2" class="left"><img id="R2" class="right"> <img id="M2" class="middle"></div>
                 </div>
             </div>
             <div class="flex">
                 <div class="hover">
                     <div class="card2">
-                        <p class="description">Etude de projet</p><img src="img/Gaine 2701 assemblage 2.png" class="left"> <img src="img/Capture 2910 3.png" class="right"> <img src="img/Capture 2701 3d.png" class="middle"></div>
+                        <p class="description">Etude de projet</p><img id="L3" class="left"> <img id="R3" class="right"> <img id="M3" class="middle"></div>
                 </div>
                 <div class="hover">
                     <div class="card2">
-                        <p class="description">Installation complète</p><img src="img//c0cc2127-d5d1-4551-a58b-f8810966ded9.jpeg" class="left"> <img src="img/4173969b-65fc-4617-843d-711aa44b1d9e.jpeg" class="right"> <img src="img/120e21a2-83cb-43ba-9fa4-f79532850dd7.jpeg" class="middle"></div>
+                        <p class="description">Installation complète</p><img id="L4" class="left"> <img id="R4" class="right"> <img id="M4" class="middle"></div>
                 </div>
             </div>
         </div>
@@ -124,7 +123,7 @@
         <section class="customer-logos2 slider2">
             <div class="slide2"><img src="img/partenaire/lechler_logo_juin19.png"></div>
             <div class="slide2"><img src="img/partenaire/logo-neu-process.png"></div>
-            <div class="slide2"><img src="img/partenaire/logo-Siemens.jpeg"></div>
+            <div class="slide2"><img src="img/partenaire/logo-Siemens.png"></div>
             <div class="slide2"><img src="img/partenaire/someflu.png"></div>
         </section>
     </div>
@@ -133,18 +132,18 @@
 
     <div class="container">
         <h2 class="text-center font-weight-bold">nous font confiance :</h2>
-        <section class="customer-logos slider">
-            <div class="slide"><img src="img/LogoConfiance/artelia.png"></div>
-            <div class="slide"><img src="img/LogoConfiance/guerbet.png"></div>
-            <div class="slide"><img src="img/LogoConfiance/logo-constellium.png"></div>
-            <div class="slide"><img class="TailleImg" src="img/LogoConfiance/logo-orange.png"></div>
-            <div class="slide"><img src="img/LogoConfiance/Logo-Veolia.png"></div>
-            <div class="slide"><img src="img/LogoConfiance/ocp.png"></div>
-            <div class="slide"><img src="img/LogoConfiance/orano-logo.png"></div>
-            <div class="slide"><img src="img/LogoConfiance/sgd-pharma-logo.svg"></div>
-            <div class="slide"><img src="img/LogoConfiance/siaap.png"></div>
-            <div class="slide"><img src="img/LogoConfiance/suez.png"></div>
-            <div class="slide"><img src="img/LogoConfiance/valorhin.png"></div>
+        <section id="Confiance" class="customer-logos slider">
+            <!--<div class="slide"><img src="img/LogoConfiance/artelia.png"></div>-->
+            <!--<div class="slide"><img src="img/LogoConfiance/guerbet.png"></div>-->
+            <!--<div class="slide"><img src="img/LogoConfiance/logo-constellium.png"></div>-->
+            <!--<div class="slide"><img class="TailleImg" src="img/LogoConfiance/logo-orange.png"></div>-->
+            <!--<div class="slide"><img src="img/LogoConfiance/Logo-Veolia.png"></div>-->
+            <!--<div class="slide"><img src="img/LogoConfiance/ocp.png"></div>-->
+            <!--<div class="slide"><img src="img/LogoConfiance/orano-logo.png"></div>-->
+            <!--<div class="slide"><img src="img/LogoConfiance/sgd-pharma-logo.svg"></div>-->
+            <!--<div class="slide"><img src="img/LogoConfiance/siaap.png"></div>-->
+            <!--<div class="slide"><img src="img/LogoConfiance/suez.png"></div>-->
+            <!--<div class="slide"><img src="img/LogoConfiance/valorhin.png"></div>-->
         </section>
     </div>
 
@@ -169,4 +168,5 @@
     </footer>
 </body>
 <script type="text/javascript" src="accueil.js"></script>
+<script type="text/javascript" src="confiance.js"></script>
 </html>
