Auto stash before rebase of "Animation"

--- a/accueil.html
+++ b/accueil.html
@@ -120,11 +120,7 @@
             <div class="barre"></div>
             <div class="sphère"></div>
         </div>
-        <section class="customer-logos2 slider2">
-            <div class="slide2"><img src="img/partenaire/lechler_logo_juin19.png"></div>
-            <div class="slide2"><img src="img/partenaire/logo-neu-process.png"></div>
-            <div class="slide2"><img src="img/partenaire/logo-Siemens.png"></div>
-            <div class="slide2"><img src="img/partenaire/someflu.png"></div>
+        <section id="Partenaire" class="customer-logos2 slider2">
         </section>
     </div>
 
@@ -133,17 +129,6 @@
     <div class="container">
         <h2 class="text-center font-weight-bold">nous font confiance :</h2>
         <section id="Confiance" class="customer-logos slider">
-            <!--<div class="slide"><img src="img/LogoConfiance/artelia.png"></div>-->
-            <!--<div class="slide"><img src="img/LogoConfiance/guerbet.png"></div>-->
-            <!--<div class="slide"><img src="img/LogoConfiance/logo-constellium.png"></div>-->
-            <!--<div class="slide"><img class="TailleImg" src="img/LogoConfiance/logo-orange.png"></div>-->
-            <!--<div class="slide"><img src="img/LogoConfiance/Logo-Veolia.png"></div>-->
-            <!--<div class="slide"><img src="img/LogoConfiance/ocp.png"></div>-->
-            <!--<div class="slide"><img src="img/LogoConfiance/orano-logo.png"></div>-->
-            <!--<div class="slide"><img src="img/LogoConfiance/sgd-pharma-logo.svg"></div>-->
-            <!--<div class="slide"><img src="img/LogoConfiance/siaap.png"></div>-->
-            <!--<div class="slide"><img src="img/LogoConfiance/suez.png"></div>-->
-            <!--<div class="slide"><img src="img/LogoConfiance/valorhin.png"></div>-->
         </section>
     </div>
 
@@ -168,5 +153,4 @@
     </footer>
 </body>
 <script type="text/javascript" src="accueil.js"></script>
-<script type="text/javascript" src="confiance.js"></script>
 </html>
