--- a/modif accueil.html
+++ b/modif accueil.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="accueil.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-    <script type="text/javascript" src="confiance.js"></script>
 </head>
 
 <body>
@@ -95,11 +94,7 @@
     <div class="container2">
         <h3 class="text-center2 font-weight-bold2">Nos partenaires :</h3>
         <div class="déco"><div class="sphère"></div><div class="transmission"></div><div class="barre"></div><div class="sphère"></div></div>
-        <section class="customer-logos2 slider2">
-            <div class="slide2"><img src="img/partenaire/lechler_logo_juin19.png"></div>
-            <div class="slide2"><img src="img/partenaire/logo-neu-process.png"></div>
-            <div class="slide2"><img src="img/partenaire/logo-Siemens.png"></div>
-            <div class="slide2"><img src="img/partenaire/someflu.png"></div>
+        <section id="Partenaire" class="customer-logos2 slider2">
         </section>
     </div>
 
@@ -107,19 +102,7 @@
 
     <div class="container">
         <h2 class="text-center font-weight-bold">nous font confiance :</h2>
-        <section class="customer-logos slider">
-            <div class="slide"><img src="img/LogoConfiance/artelia.png"></div>
-            <div class="slide"><img src="img/LogoConfiance/guerbet.png"></div>
-            <div class="slide"><img src="img/LogoConfiance/logo-constellium.png"></div>
-            <div class="slide"><img class="TailleImg" src="img/LogoConfiance/logo-orange.png"></div>
-            <div class="slide"><img src="img/LogoConfiance/logo-sanofi.png"></div>
-            <div class="slide"><img src="img/LogoConfiance/Logo-Veolia.png"></div>
-            <div class="slide"><img src="img/LogoConfiance/ocp.png"></div>
-            <div class="slide"><img src="img/LogoConfiance/orano-logo.png"></div>
-            <div class="slide"><img src="img/LogoConfiance/sgd-pharma-logo.svg"></div>
-            <div class="slide"><img src="img/LogoConfiance/siaap.png"></div>
-            <div class="slide"><img src="img/LogoConfiance/suez.png"></div>
-            <div class="slide"><img src="img/LogoConfiance/valorhin.png"></div>
+        <section id="Confiance" class="customer-logos slider">
         </section>
     </div>
 
