--- a/servithenFR/htmlFR/accueilFR.html
+++ b/servithenFR/htmlFR/accueilFR.html
@@ -48,7 +48,7 @@
                       <i class="fa fa-caret-down"></i>
                     </button>
                     <div class="dropdown-content2">
-                        <a  href="appli.html">MyPartner</a>
+                        <a href="appli.html">MyPartner</a>
                         <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 2</a>
                         <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
                     </div>
@@ -87,7 +87,7 @@
         </div>
 
     </div>
-
+    <p>tesssssssssssstttttttt</p>
     <!-- section notre activité avec les image et les texte-->
 
     <div class="page"></div>
