modif footer header(logo +drapeau)

--- a/servithenEN/htmlEN/formEN.html
+++ b/servithenEN/htmlEN/formEN.html
@@ -177,7 +177,7 @@
         <footer class="coordonne">
 
             <div class="foters">
-                <h4>Coordinated :</h4>
+                <h4>Contact information :</h4>
             </div>
 
             <div class="foter">
@@ -201,11 +201,6 @@
                         8 Rue Guillaume de Bois Nivard,<br> 78640 Neauphle-le-Château</a>
 
             </div>
-
-
-
-
-
 
         </footer>
 </body>
