--- a/servithenFR/htmlFR/accueilFR.html
+++ b/servithenFR/htmlFR/accueilFR.html
@@ -170,7 +170,7 @@
         <footer class="coordonne">
 
             <div class="foters">
-                <h4>Coordonné :</h4>
+                <h4>Coordonnées :</h4>
             </div>
 
             <div class="foter">
@@ -194,11 +194,6 @@
                         8 Rue Guillaume de Bois Nivard,<br> 78640 Neauphle-le-Château</a>
 
             </div>
-
-
-
-
-
 
         </footer>
 </body>
