Nombre de text area modifiable
Prochaine étape stockage json

--- a/modif accueil.html
+++ b/modif accueil.html
@@ -96,6 +96,9 @@
         <div class="déco"><div class="sphère"></div><div class="transmission"></div><div class="barre"></div><div class="sphère"></div></div>
         <section id="Partenaire" class="customer-logos2 slider2">
         </section>
+        <div>
+            <button id="PartB+" type="button">+</button><button id="PartB-" type="button">-</button>
+        </div>
     </div>
 
 
@@ -104,6 +107,9 @@
         <h2 class="text-center font-weight-bold">nous font confiance :</h2>
         <section id="Confiance" class="customer-logos slider">
         </section>
+        <div>
+            <button id="ConfB+" type="button">+</button><button type="button" id="ConfB-">-</button>
+        </div>
     </div>
 
 
