menu deroulant modif

--- a/servithenEN/htmlEN/presentationEN.html
+++ b/servithenEN/htmlEN/presentationEN.html
@@ -31,35 +31,65 @@
 
 
             <div class="dropdown">
-                <button class="dropbtn">Waiting
-                    <i class="fa fa-caret-down"></i>
-                  </button>
+                <button class="dropbtn">CONTACT US
+              </button>
                 <div class="dropdown-content1">
-                    <a href="/servithenEN/htmlEN/formEN.html">Contact us</a>
+                    <a href="/servithenEN/htmlEN/formEN.html">To the contact page</a>
+                </div>
+            </div>
+
+            <div class="dropdown">
+                <button class="dropbtn">INDUSTRY 4.0 
+              </button>
+                <div class="dropdown-content3">
                     <a href="appliEN.html">MyPartner</a>
                     <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
                 </div>
             </div>
 
             <div class="dropdown">
-                <button class="dropbtn">Waiting 
-                      <i class="fa fa-caret-down"></i>
-                    </button>
-                <div class="dropdown-content2">
+                <button class="dropbtn">SERVICES 
+              </button>
+                <div class="dropdown-content3">
                     <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 1</a>
+                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 2</a>
+                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
+                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 4</a>
+                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 5</a>
+                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 6</a>
+                </div>
+            </div>
+
+            <div class="dropdown">
+                <button class="dropbtn">PRODUCTS 
+              </button>
+                <div class="dropdown-content3">
+                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 1</a>
+                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 2</a>
+                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
+                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 4</a>
+                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 5</a>
+                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 6</a>
+                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 7</a>
+                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 8</a>
+                </div>
+            </div>
+
+            <div class="dropdown">
+                <button class="dropbtn">EXPERTISE 
+              </button>
+                <div class="dropdown-content3">
+                    <a href="/servithenEN/htmlEN/presentationEN.html">Presentation</a>
                     <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 2</a>
                     <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
                 </div>
             </div>
 
             <div class="dropdown">
-                <button class="dropbtn">Home 
-                    <i class="fa fa-caret-down"></i>
-                  </button>
+                <button class="dropbtn">HOME 
+              </button>
                 <div class="dropdown-content3">
-                    <a href="/servithenEN/htmlEN/accueilEN.html">Accueil</a>
-                    <a href="/servithenEN/htmlEN/presentationEN.html">Presentation</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
+                    <a href="/servithenEN/htmlEN/accueilEN.html">Home</a>
                 </div>
             </div>
         </div>
