--- a/servithenFR/htmlFR/accueilFR.html
+++ b/servithenFR/htmlFR/accueilFR.html
@@ -33,37 +33,68 @@
 
 
                 <div class="dropdown">
-                    <button class="dropbtn">En Attente
-                    <i class="fa fa-caret-down"></i>
+                    <button class="dropbtn">NOUS CONTACTER
                   </button>
                     <div class="dropdown-content1">
-                        <a href="/servithenFR/htmlFR/formFR.html">Nous contacter</a>
+                        <a href="/servithenFR/htmlFR/formFR.html">Vers la page de contact</a>
+                    </div>
+                </div>
+
+                <div class="dropdown">
+                    <button class="dropbtn">INDUSTRIE 4.0 
+                  </button>
+                    <div class="dropdown-content3">
                         <a href="appli.html">MyPartner</a>
                         <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
                     </div>
                 </div>
 
                 <div class="dropdown">
-                    <button class="dropbtn">En Attente 
-                      <i class="fa fa-caret-down"></i>
-                    </button>
-                    <div class="dropdown-content2">
+                    <button class="dropbtn">SERVICES 
+                  </button>
+                    <div class="dropdown-content3">
+                        <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 1</a>
                         <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 2</a>
+                        <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
+                        <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 4</a>
+                        <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 5</a>
+                        <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 6</a>
+                    </div>
+                </div>
+
+                <div class="dropdown">
+                    <button class="dropbtn">PRODUITS 
+                  </button>
+                    <div class="dropdown-content3">
+                        <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 1</a>
+                        <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 2</a>
+                        <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
+                        <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 4</a>
+                        <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 5</a>
+                        <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 6</a>
+                        <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 7</a>
+                        <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 8</a>
+                    </div>
+                </div>
+
+                <div class="dropdown">
+                    <button class="dropbtn">SAVOIR-FAIRE 
+                  </button>
+                    <div class="dropdown-content3">
+                        <a href="/servithenFR/htmlFR/presentationFR.html">Présentation</a>
                         <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 2</a>
                         <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
                     </div>
                 </div>
 
                 <div class="dropdown">
-                    <button class="dropbtn">Accueil 
-                    <i class="fa fa-caret-down"></i>
+                    <button class="dropbtn">ACCUEIL 
                   </button>
                     <div class="dropdown-content3">
                         <a href="/servithenFR/htmlFR/accueilFR.html">Accueil</a>
-                        <a href="/servithenFR/htmlFR/presentationFR.html">Présentation</a>
-                        <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
                     </div>
                 </div>
+
             </div>
 
         </div>
