--- a/servithenFR/htmlFR/presentationFR.html
+++ b/servithenFR/htmlFR/presentationFR.html
@@ -50,14 +50,13 @@
             <div class="dropdown">
                 <button class="dropbtn">SERVICES 
               </button>
-                <div class="dropdown-content3">
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 1</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 2</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 4</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 5</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 6</a>
-                </div>
+              <div class="dropdown-content3">
+                <a  href="serviceFR/service1.html">Audits et Expertises d’installations</a>
+                <a  href="serviceFR/service2.html">Remise aux normes réglementaire </a>
+                <a  href="serviceFR/service3.html">Valorisation énergétique</a>
+                <a  href="serviceFR/service4.html">Etudes de faisabilité, Avant-projets et études de détail</a>
+                <a  href="serviceFR/service5.html">Maintenance préventive / curative</a>
+            </div>
             </div>
 
             <div class="dropdown">
