--- a/modif accueil.html
+++ b/modif accueil.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <form method="post" action="modifaccueil.php">
+    <form method="post" action="modif accueil.php">
     <header>
 
         <!-- La bar navigation-->
@@ -81,12 +81,32 @@
             <div class="déco"><div class="sphère"></div><div class="transmission"></div><div class="barre"></div><div class="sphère"></div></div>
             <textarea name="Activity" id="DescActi"></textarea>
             <div class="flex">
-                <div class="hover"><div class="card2"><textarea name="description1" id="description1" class="descriptionmodif">Diagnostic d'installation</textarea><textarea name="left1" id="left1" class="modifleft"></textarea> <textarea name="right1" id="right1" class="modifright"></textarea> <textarea name="middle1" id="middle1" class="modifmiddle"></textarea></div></div>
-                <div class="hover"><div class="card2"><textarea name="description2" id="description2" class="descriptionmodif">Remise au normes</textarea><textarea name="left2" id="left2" class="modifleft"></textarea> <textarea name="right2" id="right2" class="modifright"></textarea> <textarea name="middle2" id="middle2" class="modifmiddle"></textarea></div></div>
+                <div class="hover"><div class="card2">
+                    <textarea name="description1" id="description1" class="descriptionmodif"></textarea>
+                    <textarea name="left1" id="left1" class="modifleft"></textarea> 
+                    <textarea name="right1" id="right1" class="modifright"></textarea> 
+                    <textarea name="middle1" id="middle1" class="modifmiddle"></textarea>
+                </div></div>
+                <div class="hover"><div class="card2">
+                    <textarea name="description2" id="description2" class="descriptionmodif"></textarea>
+                    <textarea name="left2" id="left2" class="modifleft"></textarea> 
+                    <textarea name="right2" id="right2" class="modifright"></textarea> 
+                    <textarea name="middle2" id="middle2" class="modifmiddle"></textarea>
+                </div></div>
             </div>
             <div class="flex">
-                <div class="hover"><div class="card2"><textarea name="description3" id="description3" class="descriptionmodif">Etude de projet</textarea><textarea name="left3" id="left3" class="modifleft"></textarea> <textarea name="right3" id="right3" class="modifright"></textarea> <textarea name="middle3" id="middle3" class="modifmiddle"></textarea></div></div>
-                <div class="hover"><div class="card2"><textarea name="description4" id="description4" class="descriptionmodif">Installation complète</textarea><textarea name="left4" id="left4" class="modifleft"></textarea> <textarea name="right4" id="right4" class="modifright"></textarea> <textarea name="middle4" id="middle4" class="modifmiddle"></textarea></div></div>
+                <div class="hover"><div class="card2">
+                    <textarea name="description3" id="description3" class="descriptionmodif"></textarea>
+                    <textarea name="left3" id="left3" class="modifleft"></textarea> 
+                    <textarea name="right3" id="right3" class="modifright"></textarea> 
+                    <textarea name="middle3" id="middle3" class="modifmiddle"></textarea>
+                </div></div>
+                <div class="hover"><div class="card2">
+                    <textarea name="description4" id="description4" class="descriptionmodif"></textarea>
+                    <textarea name="left4" id="left4" class="modifleft"></textarea> 
+                    <textarea name="right4" id="right4" class="modifright"></textarea> 
+                    <textarea name="middle4" id="middle4" class="modifmiddle"></textarea>
+                </div></div>
             </div>
         </div>
     </section>
@@ -98,6 +118,7 @@
         </section>
         <div>
             <button id="PartB+" type="button">+</button><button id="PartB-" type="button">-</button>
+            <textarea id="NumbPart" name="NumbPart"></textarea>
         </div>
     </div>
 
@@ -109,6 +130,7 @@
         </section>
         <div>
             <button id="ConfB+" type="button">+</button><button type="button" id="ConfB-">-</button>
+            <textarea id="NumbConf" name="NumbConf"></textarea>
         </div>
     </div>
 
