--- a/servithenFR/htmlFR/formFR.html
+++ b/servithenFR/htmlFR/formFR.html
@@ -183,24 +183,22 @@
 
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoTelW.png">
-                <a href="Tel:+33134897146"> +33 (0) 1 34 89 71 46</a>
+                <a href=""></a>
             </div>
             <br>
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoMailW.png">
-                <a class="footerp" href="mailto:info@servithen.fr">info@servithen.fr</a>
+                <a class="footerp" href=""></a>
             </div>
             <br>
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/linkedinW.png">
-                <a target="_blank" class="footerp" class="footerp" href="https://www.linkedin.com/company/servithen/">Société SERVITHEN</a>
+                <a target="_blank" class="footerp" class="footerp" href=""></a>
             </div>
             <br>
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoPosW.png">
-                <a target="_blank" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">
-                        8 Rue Guillaume de Bois Nivard,<br> 78640 Neauphle-le-Château</a>
-
+                <a target="_blank" href=""></a>
             </div>
 
 
