--- a/servithenFR/htmlFR/modifaccueilFR.html
+++ b/servithenFR/htmlFR/modifaccueilFR.html
@@ -10,12 +10,11 @@
     <link rel="stylesheet" href="/servithenFR/cssFR/accueilFR.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-    <script type="text/javascript" src="/servithenFR/jsFR/accueilFR.js"></script>
-
+    <script type="text/javascript" src="/servithenFR/jsFR/modifaccueilFR.js"></script>
 </head>
 
 <body>
-
+    <form method="post" action="modifaccueilFR.php">
     <header>
 
         <!-- La bar navigation -->
@@ -26,6 +25,7 @@
 
 
                 <a href="/servithenFR/htmlFR/accueilFR.html"><img class="logo" src="/img/logoSite/logo.png "></a>
+                <button>Confirmer les changements</button>
 
                 <a href="/servithenFR/htmlFR/accueilFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" /></a>
 
@@ -76,14 +76,14 @@
 
     <div id="infoAccueil">
         <div id="txtAccueil">
-            <p id="txtTitre" class="pTitre">
-            </p>
+            <textarea name="Titre" id="txtTitre">
+            </textarea>
         </div>
         <div id="soustxtAccueil">
-            <p id="stxtTitre" class="pTitre">
-            </p>
+            <textarea name="SousTitre" id="stxtTitre">
+            </textarea>
         </div>
-
+        <textarea name="Backgroundimg" id="Background"></textarea>
     </div>
 
     <!-- section notre activité avec les image et les texte-->
@@ -98,25 +98,38 @@
                 <div class="barre"></div>
                 <div class="sphère"></div>
             </div>
-            <p id="DescActi" class="textphoto"></p>
+            <textarea name="Activity" id="DescActi"></textarea>
             <div class="flex">
                 <div class="hover">
                     <div class="card2">
-                        <p id="description1" class="description">Diagnostic d'installation</p><img id="L1" class="left"> <img id="R1" class="right"> <img id="M1" class="middle"></div>
-                </div>
+                        <textarea name="description1" id="description1" class="descriptionmodif"></textarea>
+                        <textarea name="left1" id="left1" class="modifleft"></textarea> 
+                        <textarea name="right1" id="right1" class="modifright"></textarea> 
+                        <textarea name="middle1" id="middle1" class="modifmiddle"></textarea>
+                </div></div>
                 <div class="hover">
                     <div class="card2">
-                        <p id="description2" class="description">Remise aux normes</p><img id="L2" class="left"><img id="R2" class="right"> <img id="M2" class="middle"></div>
-                </div>
+                        <textarea name="description2" id="description2" class="descriptionmodif"></textarea>
+                        <textarea name="left2" id="left2" class="modifleft"></textarea> 
+                        <textarea name="right2" id="right2" class="modifright"></textarea> 
+                        <textarea name="middle2" id="middle2" class="modifmiddle"></textarea>
+                    </div></div>
             </div>
             <div class="flex">
                 <div class="hover">
                     <div class="card2">
-                        <p id="description3" class="description">Etude de projet</p><img id="L3" class="left"> <img id="R3" class="right"> <img id="M3" class="middle"></div>
-                </div>
+                        <textarea name="description3" id="description3" class="descriptionmodif"></textarea>
+                        <textarea name="left3" id="left3" class="modifleft"></textarea>
+                        <textarea name="right3" id="right3" class="modifright"></textarea> 
+                        <textarea name="middle3" id="middle3" class="modifmiddle"></textarea>
+                    </div></div>
                 <div class="hover">
                     <div class="card2">
-                        <p id="description4" class="description">Installation complète</p><img id="L4" class="left"> <img id="R4" class="right"> <img id="M4" class="middle"></div>
+                        <textarea name="description4" id="description4" class="descriptionmodif"></textarea>
+                        <textarea name="left4" id="left4" class="modifleft"></textarea> 
+                        <textarea name="right4" id="right4" class="modifright"></textarea> 
+                        <textarea name="middle4" id="middle4" class="modifmiddle"></textarea>
+                    </div></div>
                 </div>
             </div>
         </div>
@@ -136,6 +149,10 @@
             </div>
             <section id="Partenaire" class="customer-logos2 slider2">
             </section>
+            <div>
+                <button id="PartB+" type="button">+</button><button id="PartB-" type="button">-</button>
+                <textarea id="NumbPart" name="NumbPart"></textarea>
+            </div>
         </div>
 
 
@@ -144,6 +161,10 @@
             <h2 class="text-center font-weight-bold">nous font confiance :</h2>
             <section id="Confiance" class="customer-logos slider">
             </section>
+            <div>
+                <button id="ConfB+" type="button">+</button><button type="button" id="ConfB-">-</button>
+                <textarea id="NumbConf" name="NumbConf"></textarea>
+            </div>
         </div>
 
 
@@ -151,31 +172,33 @@
         <footer class="coordonne">
 
             <div class="foters">
-                <h4>Coordonné :</h4>
+                <h4>Coordonnées :</h4>
             </div>
 
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoTelW.png">
-                <a id="Telephone" href="Tel:+33134897146"> +33 (0) 1 34 89 71 46</a>
+                <textarea name="Telephone" class="footerp" id="Telephone"></textarea>
+                <textarea name="TelephoneURL" id="TelephoneURL"></textarea>
             </div>
             <br>
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoMailW.png">
-                <a id="Mail" class="footerp" href="mailto:info@servithen.fr">info@servithen.fr</a>
-            </div>
+                <textarea name="Mail" class="footerp" id="Mail"></textarea>
+                <textarea name="MailURL" id="MailURL"></textarea>
+                </div>
             <br>
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/linkedinW.png">
-                <a id="Linkedin" target="_blank" class="footerp" class="footerp" href="https://www.linkedin.com/company/servithen/">Société SERVITHEN</a>
+                <textarea name="Linkedin" id="Linkedin"></textarea>
+                <textarea name="LinkedinURL" id="LinkedinURL"></textarea>
             </div>
             <br>
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoPosW.png">
-                <a id="Local" target="_blank" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">
-                        8 Rue Guillaume de Bois Nivard,<br> 78640 Neauphle-le-Château</a>
-
+                <textarea name="Local" id="Local"></textarea>
+                <textarea name="LocalURL" id="LocalURL"></textarea>
             </div>
         </footer>
+    </form>
 </body>
-
 </html>
