--- a/servithenFR/htmlFR/ProduitFR.html/ElectrofiltresHumidesSecsFR.html
+++ b/servithenFR/htmlFR/ProduitFR.html/ElectrofiltresHumidesSecsFR.html
@@ -27,9 +27,9 @@
 
                 <a href="/servithenFR/htmlFR/accueilFR.html"><img class="logo" src="/img/logoSite/logo.png "></a>
 
-                <a href="/servithenFR/htmlFR/accueilFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" /></a>
+                <a href="/servithenFR/htmlFR//ProduitFR.html/ElectrofiltresHumidesSecsFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" /></a>
 
-                <a href="/servithenEN/htmlEN/accueilEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" /></a>
+                <a href="/servithenEN/htmlEN//ProduitEN.html/ElectrofiltresHumidesSecsEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" /></a>
 
 
                 <div class="dropdown">
@@ -44,7 +44,7 @@
                     <button class="dropbtn">INDUSTRIE 4.0 
                   </button>
                     <div class="dropdown-content3">
-                        <a href="appli.html">MyPartner</a>
+                        <a href="/servithenFR/htmlFR/appli.html">MyPartner</a>
                         <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
                     </div>
                 </div>
@@ -123,37 +123,26 @@
 
     <div class="page"></div>
     <section class="nav">
-        <div class="fond">
-            <h3>Notre activité</h3>
+        <div class="fondBroch">
+            <h3>Electrofiltres humides / secs</h3>
             <div class="déco">
                 <div class="sphère"></div>
                 <div class="transmission"></div>
                 <div class="barre"></div>
                 <div class="sphère"></div>
             </div>
-            <p class="textphoto">Basée en Ile-de-France et au Maroc, SERVITHEN est une société qui propose des services dans le domaine de lavage des gaz en tant que Maître d’œuvre (MOE) et Maître d’ouvrage (MO) pour examiner vos équipements de près et prolonger leurs durées
-                de vie tout en s’adaptant à vos besoins.</p>
-            <div class="flex">
-                <div class="hover">
-                    <div class="card2">
-                        <p class="description">Diagnostic d'installation</p><img src="/img/IMG_E7116.jpeg" class="left"> <img src="/img/IMG_7078.jpeg" class="right"> <img src="/img/IMG_7104 bis.jpeg" class="middle"></div>
-                </div>
-                <div class="hover">
-                    <div class="card2">
-                        <p class="description">Remise aux normes</p><img src="/img/20220310_152203741_iOS.jpeg" class="left"><img src="/img/20220310_152209869_iOS.jpeg" class="right"> <img src="/img/Norme.png" class="middle"></div>
-                </div>
+            <div>
+
             </div>
-            <div class="flex">
-                <div class="hover">
-                    <div class="card2">
-                        <p class="description">Etude de projet</p><img src="/img/Gaine 2701 assemblage 2.png" class="left"> <img src="/img/Capture 2910 3.png" class="right"> <img src="/img/Capture 2701 3d.png" class="middle"></div>
-                </div>
-                <div class="hover">
-                    <div class="card2">
-                        <p class="description">Installation complète</p><img src="/img//c0cc2127-d5d1-4551-a58b-f8810966ded9.jpeg" class="left"> <img src="/img/4173969b-65fc-4617-843d-711aa44b1d9e.jpeg" class="right"> <img src="/img/120e21a2-83cb-43ba-9fa4-f79532850dd7.jpeg"
-                            class="middle"></div>
-                </div>
+            <div class="carrerimg">
+                <img class="imgBrochur" src="/img/20220310_152203741_iOS.jpeg">
+                <p class="texteBroch">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti temporibus tempora consequatur autem, quas molestiae adipisci nulla exercitationem ex eos voluptate itaque labore delectus non? Fugit saepe ex dolore? Ducimus.</p>
+                <button class="btnPDF">
+                    <a class="DL" target="_blank" href="/img/brochure/FicheLAVEURSDEFUMÉES.pdf">Afficher la brochure</a>
+                </button>
             </div>
+
+
         </div>
     </section>
 
