--- a/servithenFR/htmlFR/appli.html
+++ b/servithenFR/htmlFR/appli.html
@@ -65,14 +65,14 @@
                 <button class="dropbtn">PRODUITS 
               </button>
                 <div class="dropdown-content3">
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 1</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 2</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 4</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 5</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 6</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 7</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 8</a>
+                    <a href="/servithenFR/htmlFR//ProduitFR.html/ToursDeLavageFR.html">Tours de lavage</a>
+                    <a href="/servithenFR/htmlFR//ProduitFR.html/VenturiFR.html">Venturi</a>
+                    <a href="/servithenFR/htmlFR//ProduitFR.html/ElectrofiltresHumidesSecsFR.html">Electrofiltres humides / secs</a>
+                    <a href="/servithenFR/htmlFR//ProduitFR.html/FiltresManchesFR.html">Filtres à manches</a>
+                    <a href="/servithenFR/htmlFR//ProduitFR.html/EquipementsDosageInjectionDePoudresFR.html">EDIP : Equipements de Dosage et Injection de Poudres</a>
+                    <a href="/servithenFR/htmlFR//ProduitFR.html/InstallationsFR.html">Installations « Clés en mains »</a>
+                    <a href="/servithenFR/htmlFR//ProduitFR.html/RecuperationEnergiFR.html">Récupération d’énergie</a>
+                    <a href="/servithenFR/htmlFR//ProduitFR.html/FourniturePiecesRechangeFR.html">Fourniture de pièces de rechange</a>
                 </div>
             </div>
 
@@ -176,36 +176,36 @@
     </div>
 
 
-        <!-- bas de la page avec les coordonnées -->
-        <footer class="coordonne">
+    <!-- bas de la page avec les coordonnées -->
+    <footer class="coordonne">
 
-            <div class="foters">
-                <h4>Coordonnées :</h4>
-            </div>
+        <div class="foters">
+            <h4>Coordonnées :</h4>
+        </div>
 
-            <div class="foter">
-                <img class="logoinfo" src="/img/LogoFooter/logoTelW.png">
-                <a href="Tel:+33134897146"> +33 (0) 1 34 89 71 46</a>
-            </div>
-            <br>
-            <div class="foter">
-                <img class="logoinfo" src="/img/LogoFooter/logoMailW.png">
-                <a class="footerp" href="mailto:info@servithen.fr">info@servithen.fr</a>
-            </div>
-            <br>
-            <div class="foter">
-                <img class="logoinfo" src="/img/LogoFooter/linkedinW.png">
-                <a target="_blank" class="footerp" class="footerp" href="https://www.linkedin.com/company/servithen/">Société SERVITHEN</a>
-            </div>
-            <br>
-            <div class="foter">
-                <img class="logoinfo" src="/img/LogoFooter/logoPosW.png">
-                <a target="_blank" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">
+        <div class="foter">
+            <img class="logoinfo" src="/img/LogoFooter/logoTelW.png">
+            <a href="Tel:+33134897146"> +33 (0) 1 34 89 71 46</a>
+        </div>
+        <br>
+        <div class="foter">
+            <img class="logoinfo" src="/img/LogoFooter/logoMailW.png">
+            <a class="footerp" href="mailto:info@servithen.fr">info@servithen.fr</a>
+        </div>
+        <br>
+        <div class="foter">
+            <img class="logoinfo" src="/img/LogoFooter/linkedinW.png">
+            <a target="_blank" class="footerp" class="footerp" href="https://www.linkedin.com/company/servithen/">Société SERVITHEN</a>
+        </div>
+        <br>
+        <div class="foter">
+            <img class="logoinfo" src="/img/LogoFooter/logoPosW.png">
+            <a target="_blank" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">
                         8 Rue Guillaume de Bois Nivard,<br> 78640 Neauphle-le-Château</a>
 
-            </div>
+        </div>
 
-        </footer>
+    </footer>
 </body>
 
 </html>
