--- a/servithenFR/htmlFR/presentationFR.html
+++ b/servithenFR/htmlFR/presentationFR.html
@@ -64,14 +64,14 @@
                 <button class="dropbtn">PRODUITS 
               </button>
                 <div class="dropdown-content3">
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 1</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 2</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 4</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 5</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 6</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 7</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 8</a>
+                    <a href="/servithenFR/htmlFR//ProduitFR.html/ToursDeLavageFR.html">Tours de lavage</a>
+                    <a href="/servithenFR/htmlFR//ProduitFR.html/VenturiFR.html">Venturi</a>
+                    <a href="/servithenFR/htmlFR//ProduitFR.html/ElectrofiltresHumidesSecsFR.html">Electrofiltres humides / secs</a>
+                    <a href="/servithenFR/htmlFR//ProduitFR.html/FiltresManchesFR.html">Filtres à manches</a>
+                    <a href="/servithenFR/htmlFR//ProduitFR.html/EquipementsDosageInjectionDePoudresFR.html">EDIP : Equipements de Dosage et Injection de Poudres</a>
+                    <a href="/servithenFR/htmlFR//ProduitFR.html/InstallationsFR.html">Installations « Clés en mains »</a>
+                    <a href="/servithenFR/htmlFR//ProduitFR.html/RecuperationEnergiFR.html">Récupération d’énergie</a>
+                    <a href="/servithenFR/htmlFR//ProduitFR.html/FourniturePiecesRechangeFR.html">Fourniture de pièces de rechange</a>
                 </div>
             </div>
 
