Fin d'application du json sur accueilFR

--- a/servithenFR/htmlFR/accueilFR.html
+++ b/servithenFR/htmlFR/accueilFR.html
@@ -151,7 +151,7 @@
         <footer class="coordonne">
 
             <div class="foters">
-                <h4>Coordonné :</h4>
+                <h4>Coordonnées :</h4>
             </div>
 
             <div class="foter">
